NO-ISSUE: Fixed scrollbar

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -2,6 +2,8 @@
 @tailwind components;
 @tailwind utilities;
 
+html, body {height:100%;}
+
 html {
   overflow-x: hidden;
 }
